B-68612 Tech Debt: FDA: replace Collections.emptyMap() by Map.of()